[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py"
]

[project]
name = "MBTA_Leds"
version = "v2024.01.03.1"
dependencies = ["pymbta3"]
authors = [{ name="Nicola Ferralis", email="ferralis@mit.edu" },]
description = "Display MBTA arrivals at stations via LEDs in a Raspberry Pi"
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
mbta_leds = "mbta_leds:mbta_leds"

[project.urls]
Homepage = "https://github.com/feranick/mbta"
Issues = "https://github.com/feranick/mbta/issues"
