[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py"
]

[project]
name = "MBTA_tft"
version = "v2024.01.17.1"
dependencies = ["adafruit-circuitpython-rgb-display", "adafruit-circuitpython-st7789", "adafruit-circuitpython-display-text"]
authors = [{ name="Nicola Ferralis", email="ferralis@mit.edu" },]
description = "Display MBTA arrivals at stations via TFT on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

exclude = [
  "utilities/*",
]

[project.scripts]
mbta_tft = "mbta_tft:mbta_tft"

[project.urls]
Homepage = "https://github.com/feranick/mbta"
Issues = "https://github.com/feranick/mbta/issues"
